base/volumes_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
spec:
  template:
    spec:
      volumes: 
      - hostPath: 
          path: /opt/htpc 
          type: DirectoryOrCreate 
        name: htpc-home
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
spec:
  template:
    spec:
      volumes: 
      - hostPath: 
          path: /opt/htpc 
          type: DirectoryOrCreate 
        name: htpc-home
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
spec:
  template:
    spec:
      volumes: 
      - hostPath: 
          path: /opt/htpc 
          type: DirectoryOrCreate 
        name: htpc-home
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
spec:
  template:
    spec:
      volumes: 
      - hostPath: 
          path: /opt/htpc 
          type: DirectoryOrCreate 
        name: htpc-home
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
spec:
  template:
    spec:
      volumes: 
      - hostPath: 
          path: /opt/htpc 
          type: DirectoryOrCreate 
        name: htpc-home
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
spec:
  template:
    spec:
      volumes: 
      - hostPath: 
          path: /opt/htpc 
          type: DirectoryOrCreate 
        name: htpc-home
        # persistentVolumeClaim:
        #   claimName: local-path-pvc
