base/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: htpc
spec:
  entryPoints: []
  routes:
  - kind: Rule
    match: PathPrefix(`/`)
    middlewares:
      - name: plex-path-rewrite
    priority: 0
    services:
    - kind: Service
      name: plex
      namespace: "htpc"
      port: 32400
  - kind: Rule
    match: PathPrefix(`/jackett`)
    middlewares: []
    priority: 0
    services:
    - kind: Service
      name: jackett
      namespace: "htpc"
      port: 9117
  - kind: Rule
    match: PathPrefix(`/sonarr`)
    middlewares: []
    priority: 0
    services:
    - kind: Service
      name: sonarr
      namespace: "htpc"
      port: 8989
  - kind: Rule
    match: PathPrefix(`/radarr`)
    middlewares: []
    priority: 0
    services:
    - kind: Service
      name: radarr
      namespace: "htpc"
      port: 7878
  - kind: Rule
    match: PathPrefix(`/bazarr`)
    middlewares: []
    priority: 0
    services:
    - kind: Service
      name: bazarr
      namespace: "htpc"
      port: 6767
  - kind: Rule
    match: PathPrefix(`/transmission`)
    middlewares: []
    priority: 0
    services:
    - kind: Service
      name: transmission
      namespace: "htpc"
      port: 9091
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: plex-tls-passthrough
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNIRegexp(`foo.plex.direct`,`{address:[0-9]+.[0-9]+.[0-9]+.[0-9]+}.{hash:[a-f0-9]+}.plex.direct`)
      services:
        - name: plex
          port: 32400
  tls:
    passthrough: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: plex-path-rewrite
spec:
  redirectRegex:
    regex: "^/$"
    replacement: "/manage"
